src/test/ui/const-generics/generic_const_exprs/simple_fail.full.stderr
error[E0080]: evaluation of `test::<0_usize>::{constant#0}` failed
  --> $DIR/simple_fail.rs:10:48
   |
LL | fn test<const N: usize>() -> Arr<N> where [u8; N - 1]: Sized {
   |                                                ^^^^^ attempt to compute `0_usize - 1_usize`, which would overflow

error[E0080]: evaluation of `Arr::<0_usize>::{constant#0}` failed
  --> $DIR/simple_fail.rs:6:33
   |
LL | type Arr<const N: usize> = [u8; N - 1];
   |                                 ^^^^^ attempt to compute `0_usize - 1_usize`, which would overflow

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0080`.
